CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file..

Version 1.9.1
---------------------------------------------------------------------
6 January 2008
+ Added extra filters to prevent values other than tables getting
prefixed in a select statement. Thanks

19 December 2008
+ Added some code to try and fix drag and drop images and links in
  FCKEditor. 

18 December 2008
+ Init - defines PHPWS_HOME_HTTP using Core's getCurrentUrl
+ Core - users PHPWS_HOME_HTTP if all parameters are true.

16 December 2008
+ session_name got lost on conversion. Fixed.

12 December 2008
+ Template - Added option to prevent Sigma cache use.

11 December 2008
+ Editor - moved user option above force editor define. Define was
  forcing a user who didn't want an editor to do so.
+ Form - if USE_BREAKER is false, text areas will get a use breaks
  checkbox. Modules can check if it is enabled and run breaker if they
  wish.
+ Init - Link.php included by default
+ Link - salted added to the constructor
+ Text - Link required moved to head of file

5 December 2008
+ Text
  o Added utf8 encoding before htmlentities call in parseInput to
    prevent blank text return.
  o Fixed breaker adding extra newlines.


25 November 2008
+ Added plugIn function to form class.
+ Removed pass by reference call in Core.
+ Added extra match check to checkall javascript because match
  function is failing now for some reason.
+ Module : error variable made public to prevent error. Thanks Greg.
+ Updated: javascript/check_all/head.js


Version 1.9.0
---------------------------------------------------------------------
20 November 2008
+ Fixed bug with database connection tracking. The table prefix was
  not taken into consideration.

18 November 2008
+ Database will not parse out longtext on mysql databases.

14 November 2008
+ Changed styles in default theme to accommodate menu changes.